Ensure .Menu__Card gap of 100px

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   width: 540px;
-  margin: 0px 0px 100px 0px;
 }
 
 .card__title{
