--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -35,7 +35,6 @@
   padding: 0;
   margin: 0;
   list-style-type: none;
-  gap: 100px;
+  row-gap: 100px;
+  column-gap: 100px;
 }
-
-
